tests/compiler/prefixedNumberLiteralAssignToNumberLiteralType/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.8.2/tests/cases/compiler/prefixedNumberLiteralAssignToNumberLiteralType.ts`, Apache-2.0 License

let x: 1 = +1;

let y: -1 = -1;

let z: 2 = 1;
//~^ ERROR: Type '1' is not assignable to type '2'.

let a0: 0xa = 10;
let a1: 0xA = 10;
let a2: 0xa = 0xa;
let a3: 0xA = 0xa;
let a4: 0xa = 0xA;
let a5: 0xA = 0xA;
let a6: 10 = 0xA;
let a7: 10 = 0xa;
let a8: 10 = 10;
let a9: 0xA = 1_0;
let a10: 0x0_A = 10;

let big0: 9007199254740991 = 9007199254740991; // 2^53 - j j
let big1: -9007199254740991 = -9007199254740991; // -2^53 + 1
// TODO: warn inaccurately
let big2 = 0xF_FFFF_FFFF_FFFF_FFFF; // (4 * 4 + 1) * 4 = 68 bits;
// TODO: warn inaccurately
let big3 = 0xFFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFFFFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFF_FFFFFFFF;
// TODO: warn inaccurately
let big4 = 0o777777_777777777777777777777777777777;
// TODO: warn inaccurately
let big5 = 0o777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777777777777777777777777777777777777777777777777777777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777_777777777777777777777777777;
// TODO: warn inaccurately
let big6 = 0b1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111;
// TODO: warn inaccurately
let big7 = 0b1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111_1111;
// TODO: warn inaccurately
let big8 = 9007199254740992;
// TODO: warn inaccurately
let big9 = 999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999;

0x00_11;
0X0_1;
0x1100_0011;
0X0_11_0101;
